@@ -1,4 +1,3 @@
-<div tal:replace="structure python: '//<![CDATA['" />
 <tal:def define="ftwtooltips view/generate_tooltip_js_source">
 var ftwtooltips = <span tal:replace="ftwtooltips" />;
 
@@ -52,4 +51,3 @@ $(function(){
     });
 });
 </tal:def>
-<div tal:replace="structure python: '//]]>'" />
